11/5: Here are the [Energy.pdf energy worksheets] that we have been working through in class, along with the [EnergySolutions.pdf solutions].  (Please don't refer to the solutions until after you've worked through the problem.)
11/2: Exam 2 will be on <B>Monday, November 14th</B> and will cover torque, equilibrium, angular kinematics, and momentum.  Review outlines to come by this weekend.
10/14: The exam solutions are now available in the Exams tab; the graded exams will be returned on Monday.  Note that the official "midterm grades" do not include the exam, but are an even mixture of Quiz and Homework.  If you received a midterm grade of "F" that means that you have not been showing up for quizzes and/or not completing the homework, which is a really good way to fail.  If you are having difficulties, please come talk to me during office hours or send me an email. 
10/12: Exam solutions will be posted soon; exams will be graded by Monday at the latest.
10/7: Problems 9-14 on the online homework are on material I ended up deciding not to cover last week.  Please feel free to skip them; I've set them up as "practice" problems so you won't be penalized.  Sorry. :(
10/3: Review materials for the first exam can now be found in the Exams tab.
9/26: The first Exam will be on <b>Wednesday, October 12th</b> and will cover Kinematics and Forces. Review material will be available here soon.
9/26: The audio for Monday Week 6's class did not record, so there are only written notes.  My apologies.
9/23: I've pushed the due date for the "Week 5" homework to Monday at noon, due to Homecoming etc.  The Week 6 assignment will still appear on Saturday as usual, and will be due next Saturday.
9/7: The quiz solutions are posted online under the Assignments tab. (The first page of the quiz document is the quiz without solutions in case you want to try it again sometime; the second page has the solutions.)