@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 11/7:</DIV>
+ There is <b>no</b> lab (PHYS103) this week, for anyone.
+<li>
 <DIV class="updated">Posted 11/5:</DIV>
  Here are the <A HREF="Repository/Energy.pdf">energy worksheets</A> that we have been working through in class, along with the <A HREF="Repository/EnergySolutions.pdf">solutions</A>.  (Please don't refer to the solutions until after you've worked through the problem.)
 <li>
@@ -132,7 +135,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TH>#<TH>Starting
 <TH>Monday
 <TH>Wednesday
-<TH>Friday<!--11,11--><TR class="current"><TD class="weeknumber">11
+<TH>Friday<TR><TD class="weeknumber">11
 <TD class="date">10/31
 <TD class="topic">Energy	<TD class="chapter">10
 
@@ -302,7 +305,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TD>
 	<A HREF="Repository/F2.pdf">written</A><BR>
 	<A HREF="Repository/F2.mp3">audio</A>
-<TR><TD class="weeknumber">1
+<!--1,1--><TR class="current"><TD class="weeknumber">1
 <TD class="date">8/22
 <TD class="topic">Motion Diagrams	<TD class="chapter">1
 
