@@ -1,3 +1,4 @@
+11/7: There is <b>no</b> lab (PHYS103) this week, for anyone.
 11/5: Here are the [Energy.pdf energy worksheets] that we have been working through in class, along with the [EnergySolutions.pdf solutions].  (Please don't refer to the solutions until after you've worked through the problem.)
 11/2: Exam 2 will be on <B>Monday, November 14th</B> and will cover torque, equilibrium, angular kinematics, and momentum.  Review outlines to come by this weekend.
 10/14: The exam solutions are now available in the Exams tab; the graded exams will be returned on Monday.  Note that the official "midterm grades" do not include the exam, but are an even mixture of Quiz and Homework.  If you received a midterm grade of "F" that means that you have not been showing up for quizzes and/or not completing the homework, which is a really good way to fail.  If you are having difficulties, please come talk to me during office hours or send me an email. 
